blog/istio-authn/mtls-dr.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: echoserver
spec:
  host: echoserver
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
